name: HOpenCV
version: 0.2
license: BSD3
author: Noam Lewis <jones.noamle@gmail.com>
maintainer: Anthony Cowley <acowley@gmail.com>
stability: experimental
category: AI, Graphics
synopsis: A binding for the OpenCV computer vision library.
Tested-With:   GHC==7.0.3
description:
   Limited bindings to OpenCV 2.2. (See: <http://opencv.willowgarage.com/wiki/Welcome>)
   .
   /Installation/
   .
   You must install OpenCV (development packages) prior to installing this package. Currently tested on Ubuntu Linux 11.04, Mac OS 10.5 and 10.6, Windows 7.
   .
   /Usage/
   .
   The "AI.CV.OpenCV.HighCV" module exposes the most commonly used functionality. Other modules not in the @Core@ directory provide specific types of operations. While the @Core@ modules contain to low-level OpenCV interfaces.
   .
   See @src\/Examples\/VideoFunhouse@ for an example application.
build-type:         Simple
cabal-version:      >= 1.2
extra-source-files: src/AI/CV/OpenCV/Core/HOpenCV_wrap.h 
                    src/Examples/VideoFunhouse/Makefile 
                    src/Examples/VideoFunhouse/Rate.hs
                    src/Examples/VideoFunhouse/VideoFunhouse.hs
                    src/Examples/Closing/Closing.hs
source-repository head
  type: git
  location: git://github.com/acowley/HOpenCV.git

Flag OpenCV21
  Description: Link against OpenCV 2.1
  Default:     False

library
   exposed-modules:
      AI.CV.OpenCV.Core.CV
      AI.CV.OpenCV.Core.CVOp 
      AI.CV.OpenCV.Core.CxCore
      AI.CV.OpenCV.Core.HighGui
      AI.CV.OpenCV.Core.HIplImage
      AI.CV.OpenCV.Core.HIplUtil
      AI.CV.OpenCV.Core.ColorConversion
      AI.CV.OpenCV.HighCV
      AI.CV.OpenCV.GUI
      AI.CV.OpenCV.Video
      AI.CV.OpenCV.FloodFill
      AI.CV.OpenCV.PixelUtils
      AI.CV.OpenCV.ColorConversion
      AI.CV.OpenCV.Drawing
      AI.CV.OpenCV.Motion
      AI.CV.OpenCV.Contours
      AI.CV.OpenCV.Threshold
      AI.CV.OpenCV.ArrayOps
      AI.CV.OpenCV.Filtering
      AI.CV.OpenCV.FeatureDetection
      AI.CV.OpenCV.Histograms
   c-sources:
      src/AI/CV/OpenCV/Core/HOpenCV_wrap.c
   other-modules: 
   hs-Source-Dirs: src
   if os(windows)
     include-dirs:	C:\\OpenCV2.2\\include
     extra-lib-dirs:	C:\\OpenCV2.2\\bin
     extra-libraries: 	opencv_core220,opencv_imgproc220,opencv_highgui220,opencv_video220
   else
     if flag(OpenCV21)
       CC-Options:      "-DOCV21"
       extra-libraries: cv highgui
     else
       extra-libraries: opencv_core,opencv_imgproc,opencv_highgui,opencv_video
   build-depends: base >=4 && <5, 
                  template-haskell,
                  allocated-processor >= 0.0.1, 
                  vector-space >= 0.7.2,
                  directory >= 1.0.1.0 && < 2,
                  vector == 0.7.*
   ghc-options: -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O2 -funbox-strict-fields
