name: HOpenCV
version: 0.4.0.1
license: GPL-2
maintainer: Noam Lewis <jones.noamle@gmail.com>
bug-reports: mailto:jones.noamle@gmail.com
category: AI, Graphics
synopsis: A binding for the OpenCV computer vision library
Tested-With:   GHC == 7.10.2
license-file: LICENSE
description:
   Initial version with very limited bindings to OpenCV 2.0. (See: <http://opencv.willowgarage.com/wiki/Welcome>)
   .
   For a functional interface to this library, see the package "cv-combinators".
   .
   Online module documentation, if not build below, can be found at <http://www.ee.bgu.ac.il/~noamle/>.
   .
   /Installation/
   .
   You must install OpenCV (development packages) prior to installing this package. Currently only tested on Ubuntu Linux, but should work on most linux distributions. For OpenCV installation on other *nix platforms, see <http://sourceforge.net/projects/opencvlibrary/files/opencv-unix/2.0/>
   .
   On /Ubuntu/ systems, the appropriate version of OpenCV can be installed by:
   .
   > sudo apt-get install libcv-dev libhighgui-dev libcvaux-dev
   .
   You should then have libcv4 and libhighgui4 installed automatically too.
   .

build-type: Simple
cabal-version:  >= 1.6
extra-source-files:
   src/AI/CV/OpenCV/HOpenCV_wrap.h

library
   exposed-modules:
     AI.CV.OpenCV
     AI.CV.OpenCV.Util
     AI.CV.OpenCV.CxCore
     AI.CV.OpenCV.CV
     AI.CV.OpenCV.HighGui
     AI.CV.OpenCV.ImgProc
     AI.CV.OpenCV.Video
--     AI.CV.OpenCV.Gtk
   c-sources:
      src/AI/CV/OpenCV/HOpenCV_wrap.c
   hs-Source-Dirs: src
   pkgconfig-depends: opencv
   build-depends: base >= 4 && < 5, allocated-processor >= 0.0.1, vector-space
   ghc-options: -Wall -fno-warn-type-defaults
   Ghc-Prof-Options: -Wall

executable cannyVideo
  c-sources:
     src/AI/CV/OpenCV/HOpenCV_wrap.c
  hs-source-dirs: demo,src
  Build-Depends: base >= 4 && < 5
  main-is: cannyVideo.hs
  Ghc-Options: -Wall -fno-warn-type-defaults
  Ghc-Prof-Options: -Wall
  pkgconfig-depends: opencv
  other-modules: AI.CV.OpenCV.CxCore, AI.CV.OpenCV.CV, AI.CV.OpenCV.HighGui

-- executable usingOpenCV_WithGtk
--   c-sources:
--      src/AI/CV/OpenCV/HOpenCV_wrap.c
--   hs-source-dirs: demo,src
--   Build-Depends: base >= 4 && < 5
--   main-is: usingOpenCV_WithGtk.hs
--   Ghc-Options: -Wall -fno-warn-type-defaults
--   Ghc-Prof-Options:  -prof -auto-all
--   pkgconfig-depends: opencv
--   other-modules: AI.CV.OpenCV.CxCore, AI.CV.OpenCV.CV, AI.CV.OpenCV.HighGui, AI.CV.OpenCV.Gtk

source-repository head
  type: git
  location: git://github.com/sinelaw/HOpenCV.git
